Changed link in effort to make it work

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Adoria298 Official Website
-description: Where to find code, news and videos from <a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">Adoria298</a>
+description: Where to find code, news and videos from <a href=https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ>Adoria298</a>
